javaToPythonParser.py
# Generated from javaToPython.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class javaToPythonParser ( Parser ):

    grammarFileName = "javaToPython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'>'", "'<'", "'=='", "'>='", "'<='", 
                     "'!='", "'&&'", "'||'", "'!'", "'++'", "'--'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "','", "'.'", 
                     "'''", "'\"'", "'for'", "'while'", "'if'", "'else'", 
                     "'else if'", "'break'", "'function'", "'return'", "'void'", 
                     "'int'", "'float'", "'char'", "'string'", "'boolean'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "PLUS", "MINUS", "MUL", 
                      "DIV", "MOD", "ASSIGN", "GT", "LT", "EQ", "GT_EQ", 
                      "LT_EQ", "NEQ", "AND", "OR", "NOT", "INCR", "DECR", 
                      "L_PAREN", "R_PAREN", "L_BRACKET", "R_BRACKET", "L_BRACE", 
                      "R_BRACE", "SEMICOLON", "COMMA", "DOT", "QUOTE1", 
                      "QUOTE2", "FOR", "WHILE", "IF", "ELSE", "ELSEIF", 
                      "BREAK", "FUNCTION", "RETURN", "VOID", "INT", "FLOAT", 
                      "CHAR", "STRING", "BOOLEAN", "TRUE", "FALSE", "ID", 
                      "INT_VAL", "FLOAT_VAL", "STRING_VAL", "CHAR_VAL" ]

    RULE_start = 0
    RULE_statement = 1
    RULE_operacjeMatematyczne = 2
    RULE_identifierDec = 3
    RULE_identifierInitializer = 4
    RULE_statement_condition = 5
    RULE_statement_if = 6
    RULE_statement_elseif = 7
    RULE_statement_else = 8
    RULE_block = 9
    RULE_compare = 10
    RULE_conditions = 11
    RULE_condition = 12
    RULE_condOp = 13
    RULE_toNot = 14
    RULE_orOperation = 15
    RULE_andOperation = 16
    RULE_statement_for = 17
    RULE_expression_for = 18
    RULE_statement_while = 19
    RULE_statement_return = 20
    RULE_assignment = 21
    RULE_methodDec = 22
    RULE_params = 23
    RULE_methodCall = 24
    RULE_minusOperator = 25
    RULE_oneArgumentExpression = 26
    RULE_twoArgumentExpression = 27
    RULE_incrementOperation = 28
    RULE_decrementOperation = 29
    RULE_notOperation = 30
    RULE_expression = 31
    RULE_value = 32
    RULE_identifierType = 33
    RULE_methodType = 34
    RULE_boolean_val = 35

    ruleNames =  [ "start", "statement", "operacjeMatematyczne", "identifierDec", 
                   "identifierInitializer", "statement_condition", "statement_if", 
                   "statement_elseif", "statement_else", "block", "compare", 
                   "conditions", "condition", "condOp", "toNot", "orOperation", 
                   "andOperation", "statement_for", "expression_for", "statement_while", 
                   "statement_return", "assignment", "methodDec", "params", 
                   "methodCall", "minusOperator", "oneArgumentExpression", 
                   "twoArgumentExpression", "incrementOperation", "decrementOperation", 
                   "notOperation", "expression", "value", "identifierType", 
                   "methodType", "boolean_val" ]

    EOF = Token.EOF
    WHITESPACE=1
    PLUS=2
    MINUS=3
    MUL=4
    DIV=5
    MOD=6
    ASSIGN=7
    GT=8
    LT=9
    EQ=10
    GT_EQ=11
    LT_EQ=12
    NEQ=13
    AND=14
    OR=15
    NOT=16
    INCR=17
    DECR=18
    L_PAREN=19
    R_PAREN=20
    L_BRACKET=21
    R_BRACKET=22
    L_BRACE=23
    R_BRACE=24
    SEMICOLON=25
    COMMA=26
    DOT=27
    QUOTE1=28
    QUOTE2=29
    FOR=30
    WHILE=31
    IF=32
    ELSE=33
    ELSEIF=34
    BREAK=35
    FUNCTION=36
    RETURN=37
    VOID=38
    INT=39
    FLOAT=40
    CHAR=41
    STRING=42
    BOOLEAN=43
    TRUE=44
    FALSE=45
    ID=46
    INT_VAL=47
    FLOAT_VAL=48
    STRING_VAL=49
    CHAR_VAL=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(javaToPythonParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javaToPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(javaToPythonParser.StatementContext,i)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = javaToPythonParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << javaToPythonParser.INCR) | (1 << javaToPythonParser.DECR) | (1 << javaToPythonParser.FOR) | (1 << javaToPythonParser.WHILE) | (1 << javaToPythonParser.IF) | (1 << javaToPythonParser.ELSE) | (1 << javaToPythonParser.ELSEIF) | (1 << javaToPythonParser.RETURN) | (1 << javaToPythonParser.VOID) | (1 << javaToPythonParser.INT) | (1 << javaToPythonParser.FLOAT) | (1 << javaToPythonParser.CHAR) | (1 << javaToPythonParser.STRING) | (1 << javaToPythonParser.BOOLEAN) | (1 << javaToPythonParser.ID))) != 0):
                self.state = 72
                self.statement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(javaToPythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierDec(self):
            return self.getTypedRuleContext(javaToPythonParser.IdentifierDecContext,0)


        def SEMICOLON(self):
            return self.getToken(javaToPythonParser.SEMICOLON, 0)

        def statement_condition(self):
            return self.getTypedRuleContext(javaToPythonParser.Statement_conditionContext,0)


        def statement_for(self):
            return self.getTypedRuleContext(javaToPythonParser.Statement_forContext,0)


        def statement_while(self):
            return self.getTypedRuleContext(javaToPythonParser.Statement_whileContext,0)


        def statement_return(self):
            return self.getTypedRuleContext(javaToPythonParser.Statement_returnContext,0)


        def methodDec(self):
            return self.getTypedRuleContext(javaToPythonParser.MethodDecContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(javaToPythonParser.MethodCallContext,0)


        def operacjeMatematyczne(self):
            return self.getTypedRuleContext(javaToPythonParser.OperacjeMatematyczneContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = javaToPythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.identifierDec()
                self.state = 81
                self.match(javaToPythonParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.statement_condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.statement_for()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.statement_while()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.statement_return()
                self.state = 87
                self.match(javaToPythonParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.methodDec()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.methodCall()
                self.state = 91
                self.match(javaToPythonParser.SEMICOLON)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 93
                self.operacjeMatematyczne()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacjeMatematyczneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierDec(self):
            return self.getTypedRuleContext(javaToPythonParser.IdentifierDecContext,0)


        def incrementOperation(self):
            return self.getTypedRuleContext(javaToPythonParser.IncrementOperationContext,0)


        def SEMICOLON(self):
            return self.getToken(javaToPythonParser.SEMICOLON, 0)

        def decrementOperation(self):
            return self.getTypedRuleContext(javaToPythonParser.DecrementOperationContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_operacjeMatematyczne

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacjeMatematyczne" ):
                listener.enterOperacjeMatematyczne(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacjeMatematyczne" ):
                listener.exitOperacjeMatematyczne(self)




    def operacjeMatematyczne(self):

        localctx = javaToPythonParser.OperacjeMatematyczneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_operacjeMatematyczne)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.identifierDec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.incrementOperation()
                self.state = 98
                self.match(javaToPythonParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.decrementOperation()
                self.state = 101
                self.match(javaToPythonParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierDecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(javaToPythonParser.ID, 0)

        def identifierType(self):
            return self.getTypedRuleContext(javaToPythonParser.IdentifierTypeContext,0)


        def ASSIGN(self):
            return self.getToken(javaToPythonParser.ASSIGN, 0)

        def identifierInitializer(self):
            return self.getTypedRuleContext(javaToPythonParser.IdentifierInitializerContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_identifierDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierDec" ):
                listener.enterIdentifierDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierDec" ):
                listener.exitIdentifierDec(self)




    def identifierDec(self):

        localctx = javaToPythonParser.IdentifierDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_identifierDec)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.identifierType()
                self.state = 106
                self.match(javaToPythonParser.ID)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==javaToPythonParser.ASSIGN:
                    self.state = 107
                    self.match(javaToPythonParser.ASSIGN)
                    self.state = 108
                    self.identifierInitializer()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << javaToPythonParser.INT) | (1 << javaToPythonParser.FLOAT) | (1 << javaToPythonParser.CHAR) | (1 << javaToPythonParser.STRING) | (1 << javaToPythonParser.BOOLEAN))) != 0):
                    self.state = 111
                    self.identifierType()


                self.state = 114
                self.match(javaToPythonParser.ID)

                self.state = 115
                self.match(javaToPythonParser.ASSIGN)
                self.state = 116
                self.identifierInitializer()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierInitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(javaToPythonParser.ExpressionContext,0)


        def minusOperator(self):
            return self.getTypedRuleContext(javaToPythonParser.MinusOperatorContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_identifierInitializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierInitializer" ):
                listener.enterIdentifierInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierInitializer" ):
                listener.exitIdentifierInitializer(self)




    def identifierInitializer(self):

        localctx = javaToPythonParser.IdentifierInitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifierInitializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 119
                self.minusOperator()


            self.state = 122
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_if(self):
            return self.getTypedRuleContext(javaToPythonParser.Statement_ifContext,0)


        def statement_elseif(self):
            return self.getTypedRuleContext(javaToPythonParser.Statement_elseifContext,0)


        def statement_else(self):
            return self.getTypedRuleContext(javaToPythonParser.Statement_elseContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_statement_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_condition" ):
                listener.enterStatement_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_condition" ):
                listener.exitStatement_condition(self)




    def statement_condition(self):

        localctx = javaToPythonParser.Statement_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement_condition)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [javaToPythonParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.statement_if()
                pass
            elif token in [javaToPythonParser.ELSEIF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.statement_elseif()
                pass
            elif token in [javaToPythonParser.ELSE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.statement_else()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_ifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(javaToPythonParser.IF, 0)

        def L_PAREN(self):
            return self.getToken(javaToPythonParser.L_PAREN, 0)

        def conditions(self):
            return self.getTypedRuleContext(javaToPythonParser.ConditionsContext,0)


        def R_PAREN(self):
            return self.getToken(javaToPythonParser.R_PAREN, 0)

        def block(self):
            return self.getTypedRuleContext(javaToPythonParser.BlockContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_statement_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_if" ):
                listener.enterStatement_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_if" ):
                listener.exitStatement_if(self)




    def statement_if(self):

        localctx = javaToPythonParser.Statement_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(javaToPythonParser.IF)
            self.state = 130
            self.match(javaToPythonParser.L_PAREN)
            self.state = 131
            self.conditions()
            self.state = 132
            self.match(javaToPythonParser.R_PAREN)
            self.state = 133
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_elseifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(javaToPythonParser.ELSEIF, 0)

        def L_PAREN(self):
            return self.getToken(javaToPythonParser.L_PAREN, 0)

        def conditions(self):
            return self.getTypedRuleContext(javaToPythonParser.ConditionsContext,0)


        def R_PAREN(self):
            return self.getToken(javaToPythonParser.R_PAREN, 0)

        def block(self):
            return self.getTypedRuleContext(javaToPythonParser.BlockContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_statement_elseif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_elseif" ):
                listener.enterStatement_elseif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_elseif" ):
                listener.exitStatement_elseif(self)




    def statement_elseif(self):

        localctx = javaToPythonParser.Statement_elseifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement_elseif)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(javaToPythonParser.ELSEIF)
            self.state = 136
            self.match(javaToPythonParser.L_PAREN)
            self.state = 137
            self.conditions()
            self.state = 138
            self.match(javaToPythonParser.R_PAREN)
            self.state = 139
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_elseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(javaToPythonParser.ELSE, 0)

        def block(self):
            return self.getTypedRuleContext(javaToPythonParser.BlockContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_statement_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_else" ):
                listener.enterStatement_else(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_else" ):
                listener.exitStatement_else(self)




    def statement_else(self):

        localctx = javaToPythonParser.Statement_elseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement_else)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(javaToPythonParser.ELSE)
            self.state = 142
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_BRACE(self):
            return self.getToken(javaToPythonParser.L_BRACE, 0)

        def R_BRACE(self):
            return self.getToken(javaToPythonParser.R_BRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javaToPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(javaToPythonParser.StatementContext,i)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = javaToPythonParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(javaToPythonParser.L_BRACE)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << javaToPythonParser.INCR) | (1 << javaToPythonParser.DECR) | (1 << javaToPythonParser.FOR) | (1 << javaToPythonParser.WHILE) | (1 << javaToPythonParser.IF) | (1 << javaToPythonParser.ELSE) | (1 << javaToPythonParser.ELSEIF) | (1 << javaToPythonParser.RETURN) | (1 << javaToPythonParser.VOID) | (1 << javaToPythonParser.INT) | (1 << javaToPythonParser.FLOAT) | (1 << javaToPythonParser.CHAR) | (1 << javaToPythonParser.STRING) | (1 << javaToPythonParser.BOOLEAN) | (1 << javaToPythonParser.ID))) != 0):
                self.state = 145
                self.statement()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(javaToPythonParser.R_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GT(self):
            return self.getToken(javaToPythonParser.GT, 0)

        def LT(self):
            return self.getToken(javaToPythonParser.LT, 0)

        def EQ(self):
            return self.getToken(javaToPythonParser.EQ, 0)

        def GT_EQ(self):
            return self.getToken(javaToPythonParser.GT_EQ, 0)

        def LT_EQ(self):
            return self.getToken(javaToPythonParser.LT_EQ, 0)

        def NEQ(self):
            return self.getToken(javaToPythonParser.NEQ, 0)

        def getRuleIndex(self):
            return javaToPythonParser.RULE_compare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompare" ):
                listener.enterCompare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompare" ):
                listener.exitCompare(self)




    def compare(self):

        localctx = javaToPythonParser.CompareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_compare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << javaToPythonParser.GT) | (1 << javaToPythonParser.LT) | (1 << javaToPythonParser.EQ) | (1 << javaToPythonParser.GT_EQ) | (1 << javaToPythonParser.LT_EQ) | (1 << javaToPythonParser.NEQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javaToPythonParser.ConditionContext)
            else:
                return self.getTypedRuleContext(javaToPythonParser.ConditionContext,i)


        def condOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javaToPythonParser.CondOpContext)
            else:
                return self.getTypedRuleContext(javaToPythonParser.CondOpContext,i)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_conditions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditions" ):
                listener.enterConditions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditions" ):
                listener.exitConditions(self)




    def conditions(self):

        localctx = javaToPythonParser.ConditionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_conditions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.condition()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==javaToPythonParser.AND or _la==javaToPythonParser.OR:
                self.state = 156
                self.condOp()
                self.state = 157
                self.condition()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javaToPythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(javaToPythonParser.ExpressionContext,i)


        def compare(self):
            return self.getTypedRuleContext(javaToPythonParser.CompareContext,0)


        def NOT(self):
            return self.getToken(javaToPythonParser.NOT, 0)

        def toNot(self):
            return self.getTypedRuleContext(javaToPythonParser.ToNotContext,0)


        def boolean_val(self):
            return self.getTypedRuleContext(javaToPythonParser.Boolean_valContext,0)


        def ID(self):
            return self.getToken(javaToPythonParser.ID, 0)

        def minusOperator(self):
            return self.getTypedRuleContext(javaToPythonParser.MinusOperatorContext,0)


        def condition(self):
            return self.getTypedRuleContext(javaToPythonParser.ConditionContext,0)


        def getRuleIndex(self):
            return javaToPythonParser.RULE_condition
